<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar_finishActivity"
        android:background="#FFFFFF"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEnd"
        android:text="@string/end"
        android:textSize="35sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="35dp"
        />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/item_circular_border"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/start_image"
            android:src="@drawable/ic_action_done"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textColor="#212121"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_done_the_exercise"
        android:textSize="18sp"
        android:textColor="#212121"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:id="@+id/btnFinish"
        />
</LinearLayout>