<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FF121111"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uWannaQuit"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#FF121111"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/btnYes"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            />

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:id="@+id/btnNo"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                />

    </LinearLayout>

</LinearLayout>